@@ -8,6 +8,10 @@ Changelog
 3.3.6 - Unreleased
 ------------------
 
+- Make role/permission settings consistent in Plone root
+  http://dev.plone.org/plone/ticket/7922
+  [tom_gross]
+
 - In the registration tool strip the mail text before passing it
   through message_from_string.  A leading white line would prevent
   getting Subject, To and From headers from the generated message.
